# api-debugger

./: Cargo.toml
src/: db.rs  diff.rs  errors.rs  main.rs  middleware.rs  models.rs  routes.rs
src/handlers/: api.rs  ui.rs
src/middleware/: logger.rs  mod.rs
src/services/: replay.rs
static/: index.html
